Remove partial CSAF implementation
The CSAF implementation that was contributed is in a partial state, where only a data model and API endpoints exist. No frontend and nothing that makes use of the data.

If we include this in the v5 GA release, we're bound to it WRT backward compatibility and stability guarantees. This is risky because we don't even know whether the targeted use case can be achieved with it.

We're lacking the resources to complete implementation ourselves.

The pragmatic approach is to remove the partial implementation. The code is not lost, it was part of multiple (pre-)releases and could be recovered if necessary.
